stuff/copypaste-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      pod: "1"
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              pod: "3"
      ports:
        - protocol: TCP
          port: 6379
  egress:
    - to:
        - podSelector:
            matchExpressions:
            - key: pod
              operator: In
              values: ["2", "3"]
