stuff/netpols.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: simple-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx
      ports:
        - protocol: TCP
          port: 6379
  egress:
    - to:
        - podSelector:
            matchLabels:
              pod: "1"

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      ingress: block
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: one-to-one-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      pod: "2"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              pod: "1"
      ports:
        - protocol: TCP
          port: 6379

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: multiple-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      pod: "3"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: test-ns
      ports:
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 6380
